--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="styleF.css">
+    <link rel="stylesheet" href="style.css">
     <head>
         <div class="content-wrapper"> 
         <title> Top5 European Football Leagues</title>
