--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
     <link rel="stylesheet" href="style.css">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-L7P767MB0K"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+        
+          gtag('config', 'G-L7P767MB0K');
+        </script>
         <div class="content-wrapper"> 
         <title> Top5 European Football Leagues</title>
         <h1> 
